<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.github.mikephil.charting.stockChart.charts.CandleCombinedChart
                android:id="@+id/candleChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.8">

        </com.github.mikephil.charting.stockChart.charts.CandleCombinedChart>

        <com.github.mikephil.charting.stockChart.charts.MyCombinedChart
                android:id="@+id/barchart"
                android:layout_marginTop="-12dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/infoCardView"
            android:layout_width="124dp"
            android:visibility="gone"
            android:layout_height="168dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="35dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/timeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/time"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="时间" />

            <TextView
                    android:id="@+id/openTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/open"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeTxt"
                    tools:text="@string/open" />

            <TextView
                    android:id="@+id/highTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/high"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openTxt"
                    tools:text="高" />

            <TextView
                    android:id="@+id/lowTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/low"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/highTxt"
                    tools:text="低" />

            <TextView
                    android:id="@+id/closeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/kline_close"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lowTxt" />

            <TextView
                    android:id="@+id/upDownValueTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/updownValue"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/closeTxt"
                    tools:text="涨跌额" />

            <TextView
                    android:id="@+id/upDownPercentTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/updownPercent"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upDownValueTxt"
                    tools:text="涨跌幅" />

            <TextView
                    android:id="@+id/volTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/vol"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upDownPercentTxt" />

            <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/openValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/timeValue"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/highValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/openValue"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/lowValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/highValue"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/closeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lowValue"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/upDownValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/closeValue"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/upDownPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upDownValue"
                    tools:text="1111" />

            <TextView
                    android:id="@+id/volValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/upDownPercent"
                    tools:text="1111" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>